<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/fragment_main"
    tools:context="org.warpten.wandrowid.MainActivity.AuthFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/realmAddressBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/realm_address"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameBox"
        android:layout_below="@id/realmAddressBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/account_name"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordBox"
        android:layout_below="@id/userNameBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/account_password"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wotlk"
            android:id="@+id/wotlkButton"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cataclysm"
            android:id="@+id/cataclysmButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retail"
            android:id="@+id/retailButton"
            android:visibility="gone"/> <!-- Temporarily disabled because no impl -->
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connectButton"
        android:layout_below="@id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="OnConnexionRequest"
        android:maxLines="1" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authProgressBar"
        android:layout_below="@id/connectButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/authProgressInfo"
        android:layout_below="@id/authProgressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/textView"
        android:layout_below="@id/authProgressInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:paddingTop="10dp"
        android:inputType="none"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/about"
        android:linksClickable="true"/>
</RelativeLayout>
